<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    
                
    <PreferenceCategory android:title="@string/pref_cat_timezone_title">

        <EditTextPreference
                android:dialogTitle="@string/pref_timezone_name_dialog_title" android:title="@string/pref_timezone_name_title" android:summary="@string/pref_timezone_name_summary"/>
                
        <ListPreference
                android:key="list_preference"
                android:entries="@array/pref_timezone_entries" android:dialogTitle="@string/pref_timezone_dialog_title" android:entryValues="@array/pref_timezone_values" android:title="@string/pref_timezone_title" android:summary="@string/pref_timezone_summary"/>

    </PreferenceCategory><PreferenceCategory android:title="@string/pref_update_title" android:summary="@string/pref_update_summary">
            
        <CheckBoxPreference android:key="checkbox_preference" android:title="@string/pref_format_title" android:summary="@string/pref_format_summary"/>
            
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_help_title">

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        

        <PreferenceScreen
                android:title="@string/pref_home_page_title" android:summary="@string/pref_home_page_summary">

            <intent android:action="android.intent.action.VIEW" android:data="http://wiki.github.com/hc5duke/ClockTzWidget"/>

        
</PreferenceScreen><PreferenceScreen><intent android:action="android.intent.action.VIEW" android:data="http://wiki.github.com/hc5duke/ClockTzWidget"/></PreferenceScreen>

    </PreferenceCategory>
    
    
    
</PreferenceScreen>
